# SmartCalc_v2.0

./: README.md
src/: Doxyfile  Makefile  tests.cc
src/smart_calc/: CMakeLists.txt  main.cc  pictures.qrc  s21_controller.cc  s21_controller.h
src/smart_calc/back/: s21_calc.cc  s21_calc.h  s21_functions.cc  s21_parser.cc  s21_polish.cc
src/smart_calc/front/: s21_calculator.cc  s21_calculator.h  s21_calculator.ui
